change configue database

--- a/src/resources/views/layouts/main.handlebars
+++ b/src/resources/views/layouts/main.handlebars
@@ -9,9 +9,12 @@
 </head>
 <body>
        <div class="app">
+           <div class="space"></div>
            <div class="header">
-              <nav class="navbar navbar-expand-sm navbar-light bg-light">
-                  <a class="navbar-brand" href="#">UITBlogs</a>
+              <nav class="navbar navbar-expand-sm navbar-light bg-light nav-my-course">
+                  <a class="navbar-brand" href="/">
+                  <img src="" alt="Logo Fullstacks">
+                  </a>
                   <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                       aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
