--- a/src/resources/scss/_variable.scss
+++ b/src/resources/scss/_variable.scss
@@ -1,2 +1,9 @@
 $red-color: red;
 $blue-color: blue;
+$gray-color: #4d5356;
+$mail-color: #b34a09;
+$fb-color: #0037a6;
+$plum-color: #930246;
+$primary-color: #b4320c;
+$white-color: #c8c3bd;
+$dark-color: #c8c3bd;
