--- a/src/resources/views/layouts/main.handlebars
+++ b/src/resources/views/layouts/main.handlebars
@@ -11,18 +11,20 @@
        <div class="app">
            <div class="space"></div>
            <div class="header">
-              <nav class="navbar navbar-expand-sm navbar-light bg-light nav-my-course">
-                  <a class="navbar-brand" href="/">
-                  <img src="" alt="Logo Fullstacks">
+              <nav class="navbar navbar-expand-sm navbar-light  my-nav">
+                 <div class="logo-nav">
+                      <a class="navbar-brand" href="/">
+                  <img src="/image/f8_text_logo.png" alt="Logo Fullstacks">
                   </a>
+                 </div>
                   <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                       aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="collapsibleNavId">
-                      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                      <ul class="navbar-nav mr-auto mt-2 ml-4 mt-lg-0">
                           <li class="nav-item active">
-                              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                              <a class="nav-link " href="#">Home <span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="#">Link</a>
